//
//  WeatherDetailsAccessibilityID.swift
//  weatherapp
//
//  Created by Korfant, Tomas on 28/06/2019.
//  Copyright © 2019 Korfant, Tomas. All rights reserved.
//

import UIKit

struct WeatherDetailsAccessibilityID {

    static let backButton = "Back Button"
    static let tempLabel = "Temp label"
    static let cityLabel = "City label"
    static let maxMinTempLabel = "Max/Min temp label"
    static let skyLabel = "Sky label"

}
